force-app/main/default/objects/CartItem/fields/ppbt__L3_CommodityCode__c.field-meta.xml
<CustomField>
    <fullName>ppbt__L3_CommodityCode__c</fullName>
    <label>Commodity Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>