force-app/main/default/objects/CartItem/fields/ppbt__L3_ItemType__c.field-meta.xml
<CustomField>
    <fullName>ppbt__L3_ItemType__c</fullName>
    <description>Item type for product.</description>
    <label>Item Type</label>
    <length>127</length>
    <type>Text</type>
</CustomField>