force-app/main/default/objects/CartItem/fields/ppbt__L3_UPC__c.field-meta.xml
<CustomField>
    <fullName>ppbt__L3_UPC__c</fullName>
    <label>UPC Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>