force-app/main/default/objects/CartItem/fields/PPBTB2BV2__IsLevelDataItem__c.field-meta.xml
<CustomField>
    <fullName>PPBTB2BV2__IsLevelDataItem__c</fullName>
    <formula>ISPICKVAL(Type, &quot;Product&quot;) &amp;&amp; ((PPBTB2BV2__L3_UnitAmount__c * Quantity) &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Level Data Item</label>
    <type>Checkbox</type>
</CustomField>