force-app/main/default/objects/CartItem/fields/PPBTB2BV2__L3_DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>PPBTB2BV2__L3_DiscountAmount__c</fullName>
    <formula>AdjustmentAmount +  AdjustmentTaxAmount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>