force-app/main/default/objects/CartItem/fields/PPBTB2BV2__L3_UnitAmount__c.field-meta.xml
<CustomField>
    <fullName>PPBTB2BV2__L3_UnitAmount__c</fullName>
    <formula>IF(SalesPrice = 0,  ListPrice, SalesPrice)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>